--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Files
 description: 
 google_analytics: 
 show_downloads: true
-theme: jekyll-theme-leap-day
+theme: jekyll-theme-merlot
 
 gems:
   - jekyll-mentions
