--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Files
 description: 
 google_analytics: 
 show_downloads: true
-theme: jekyll-theme-merlot
+theme: jekyll-theme-minimal
 
 gems:
   - jekyll-mentions
